test/1.4/errors/T_EBTYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method m() {}

method init() {
    // no error
    after 'a' s: m();
    after 'a' cycles: m();
    after cast(1,uint64_be_t) cycles: m();
    /// ERROR EBTYPE
    after true s: m();
    /// ERROR EBTYPE
    after NULL s: m();
    /// ERROR EBTYPE
    after true cycles: m();
    /// ERROR EBTYPE
    after NULL cycles: m();
}
